RF006 - Finalização da sprint, correção das documentações conforme avaliação
